# rv32

./: .gitignore  .gitmodules  Bare.dump  Bare.hex  Bare.vmem  Doom.hex  README.txt  Rv32.xms  Rv32Linux.xms  Rv32Win64.xms  SDRAM_test.sh  SRAM_test.sh  Setup.gtkw  Verify.gtkw  build-projects-make-linux.sh  build-projects-make-rv32.sh  build-projects-vs2022-win64.bat  build-rv32.sh  build-rv32h.bat  build-rv32h.sh  build.sh  clean.sh  config.bat  config.sh  launch.sh  make-config-rv32.inc  open-projects-win64.bat  readme.md  trace-diff.run  trace_hw_2.txt
board/SDRAM/: IP_PLL_Clk.qip  IP_PLL_Clk.v  SDRAM_tb.qpf  SDRAM_tb.qsf  SDRAM_tb.sv  stp1.stp
board/qmtech_cv/: IP_PLL_Clk.xml  SoC.qsf  SoC.qws  SoC.sdc  SoC.stp
code/: Instructions.run  Instructions.template  SoC_v2_main.cpp  SoC_v2_run.cpp
code/Bare/: Bare.c  SD.c  (+19 more)
ip/: mt48lc16m16a2.v
quartus/: .gitignore  IP_Divide.qip  IP_Divide.v  IP_Divide_bb.v  IP_FIFO.qip  IP_FIFO.v  IP_FIFO64.v  IP_FIFO64_bb.v  IP_FIFO_bb.v  IP_Multiply.v  IP_Multiply_bb.v  IP_PLL_Clk.cmp  IP_PLL_Clk.qip  IP_PLL_Clk.spd  IP_PLL_Clk.v  IP_SDRAM.bsf  IP_SDRAM.cmp  IP_SDRAM.ppf  IP_SDRAM.qip  IP_SDRAM.spd  IP_SDRAM.v  IP_SDRAM_sim.f  IP_UnsignedDivide.v  IP_UnsignedDivide_bb.v  IP_UnsignedMultiply.qip  IP_UnsignedMultiply.v  IP_UnsignedMultiply_bb.v  SRAM.sdc  SoC.ipregen.rpt  SoC.qsf  SoC.sdc  SoC.stp  SoC.v
reference/: Pin assignments.ods
scripts/: SDRAM_test.sh  SRAM_test.sh  build-projects-make-linux.sh  build-projects-make-rv32.sh  config.sh  trace-diff.run
uc/shid/: CMakeLists.txt  README.TXT  hid_app.c  main.c  tusb_config.h
(+1401 files in other folders)
